[spalenque] - #10685 - fix comment cutoff

--- a/marketplace/code/ui/frontend/css/marketplace-review.css
+++ b/marketplace/code/ui/frontend/css/marketplace-review.css
@@ -37,7 +37,10 @@ input.text {
     width: 100%;
     height: 100%;
     position: absolute;
-    background-color: rgba(255, 255, 255, 0.6);
+    background-color: rgba(237, 242, 247, 0.8);
+    top: 0;
+    left: 0;
+    z-index: 100;
 }
 
 .success_overlay p{
